[build-system]
# >=77 for SPDX license expression support in [project].license
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "esbonio-ref-links"
version = "0.1.0"
description = "Line-precise document links for reST references in esbonio (server feature and Sphinx extension)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
# Intentionally no dependencies: document_links is loaded inside an esbonio
# server environment, object_locations inside a Sphinx build environment;
# each host environment already provides what the module needs.
dependencies = []

[tool.setuptools]
packages = ["esbonio_ref_links"]
