# uv workspace root. Not itself a distributable package (tool.uv.package = false,
# and no [build-system]); the shippable packages live under packages/ as members.
[project]
name = "esbonio-ref-links-workspace"
version = "0"
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]
