# uv workspace root. Not itself a distributable package (tool.uv.package = false,
# and no [build-system]); the shippable packages live under packages/ as members.
[project]
name = "esbonio-ref-links-workspace"
version = "0"
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
# Not a runtime dependency of any workspace member (esbonio-ref-links is
# intentionally dependency-free, see its pyproject.toml) -- pulled in only so
# `uv sync --group test` gives packages/esbonio-ref-links/tests/run_tests.py a
# python with esbonio + sphinx to build the fixture project and exercise
# document_links / object_locations against a real esbonio.db.
test = ["esbonio", "sphinx"]
